# o-line

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  LLM-Disclosure.md  QUICKSTART.md  README.md  Syncing  TODO copy.md  TODO.md  config.toml  entrypoint.sh  pi.html  run.sh  snapshot.sh
.claude/skills/oline/: SKILL.md
.github/workflows/: courier.yml  publish.yml  test.yml
_examples/load-balanced-rpc-nodes/: lb-deploy.yml  node_deploy.yml
_examples/snapshot_backup/: README.md  deploy.yml
_examples/statesync/: README.md  snapshot-deploy.yml  statesync-deploy.yml
_examples/validator-and-private-sentries/: deploy.yml
_examples/validator-and-public-sentries/: README.md  sentries-deploy.yml  validator-deploy.yml
_examples/validator-and-tmkms/: deploy.yml  docker-compose.yml
cloudflare/: openapi.json
docker/oline-omnibus/: Dockerfile  entrypoint.sh
docker/pfsense-e2e/: docker-compose.yml  setup.sh
docker/pfsense-e2e/headscale/: config.yaml
docker/pfsense-e2e/internal-server/: Dockerfile  entrypoint.sh
docker/pfsense-e2e/pfsense/: Dockerfile  apply_firewall_rules.sh  easyrule  entrypoint.sh  pfSsh.php  server.py
docker/pfsense-e2e/wg-client/: Dockerfile  entrypoint.sh
docker/provider-proxy-node/: Dockerfile
docs/: cli-reference.md
docs/diagrams/: bootstrap-sequence.md  cli-commands.md  dns-workflow.md  node-management.md  parallel-deploy-sequence.md  sequential-deploy-sequence.md  session-lifecycle.md  sites-ipfs-workflow.md
docs/examples/: testnet.md
plans/: consolidation-plan.md  ephemeral-ssh-keys.md  sentry-array-deploy.md
playbook/oline-sdl/: .env.sample  Cargo.toml  Dockerfile  README.md  justfile  oline-deploy.yml  run.sh  snapshot.sh
playbook/oline-sdl/scripts/: a.deploy-oline.sh
playbook/oline-sdl/scripts/sdls/: a.kickoff-special-teams.yml  b.left-and-right-tackle.yml  c.left-and-right-forwards.yml
playbook/oline-sdl/sdls/: a.kickoff-special-teams.yml  b.left-and-right-tackle.yml  c.left-and-right-forwards.yml
playbook/oline-sdl/src/: main.rs
playbook/oline-sdl/terpnetwork/: build.yml  deploy.yml  docker-compose.yml
playbook/reverse-proxy/: README.md
plays/audible/: config-node-endpoints.sh  expose.sh  lb-init.sh  oline-bootstrap.sh  oline-entrypoint.sh  pfsense-bootstrap.sh  pfsense-tunnel.sh  push-ssh-key.sh  snapshot-transfer.sh  snapshots.sh  tls-setup.sh
plays/courier/: Cargo.toml  Dockerfile  README.md  justfile
plays/courier/src/: fetch.rs  main.rs  manifest.rs  server.rs
plays/courier/tests/: courier_integration.rs
plays/flea-flicker/: README.md
plays/flea-flicker/nginx/: api  grpc  peer  rpc  rpc-api-grpc-peer  ssh  template
plays/instant-replay/: .env.example  Dockerfile  PIR.md  README.md  deploy.yaml  docker-compose.yml  e2e-test.sh
plays/instant-replay/templates/: inventory.example.yml
plays/oline-sdl/: .env.example  Cargo.toml  README.md  justfile
plays/oline-sdl/nginx-snapshot/: Dockerfile  entrypoint.sh  nginx.conf.template
plays/oline-sdl/sdls/: README.md  a.kickoff-special-teams.yml  b.left-and-right-tackle.yml  c.left-and-right-forwards.yml  e.relayer.yml
plays/oline-sdl/src/: akash.rs  cli.rs  config.rs  crypto.rs  lib.rs  main.rs  snapshots.rs
plays/oline-sdl/src/dns/: cloudflare.rs
plays/oline-sdl/tests/: e2e_workflow.rs
plays/scrimmage/: README.md
plays/scrimmage/props/: bootstrap.sh
plays/scripts/: config-node-endpoints.sh  oline-entrypoint.sh  tls-setup-minimal.sh  tls-setup.sh
plays/tests/: e2e.sh  test-tls-nginx.sh
proto/: Cargo.toml
proto/cmd/openapi2proto/: go.mod  main.go
proto/src/: lib.rs  main.rs
recipes/: README.md  containers.toml  groups.toml  sdl-vars.toml  tz-heuristics.toml
recipes/bootstrap/: forward.md  minio.md  relayer.md  seed.md  snapshot.md  tackle.md
recipes/episodes/: full-deploy.md  refresh.md
recipes/tensorzero/: .checksums  llms.txt  tensorzero.toml
recipes/tensorzero-qmd/: llms.txt  tensorzero.toml
recipes/tensorzero/episodes/: testnet-deploy.toml
recipes/tz-oline/episodes/: full-deploy.toml  refresh.toml  (+2 more)
scripts/: team-update.sh
scripts/brain/: build.py
scripts/docs/: gen-tz.py
scripts/just/: akash.just  build.just  firewall.just  helpers.just  localterp.just  minio.just  relayer.just  remote.just  team.just  testing.just  vpn.just
scripts/sh/: headscale-scrape-creds.py  light-snapshot.sh  pfsense-tailscale-setup.sh  pin-html.sh  run-testnet-validator.sh  team-sync.sh  unpack-and-use-snapshot.sh
src/: accounts.rs  akash.rs  authz.rs  cli.rs  config.rs  crypto.rs  deployer.rs  lib.rs  log_persistence.rs  main.rs  providers.rs  sessions.rs  snapshots.rs  templates.rs  toml_config.rs
src/cmd/: authz.rs  brain.rs  console.rs  deploy.rs  dns.rs  endpoints.rs  firewall.rs  init.rs  mod.rs  node.rs  providers.rs  proxy.rs  refresh.rs  registry.rs  relayer.rs  sdl.rs  sites.rs  test.rs  testnet.rs  vpn.rs
src/dns/: cloudflare.rs
src/firewall/: mod.rs  pfsense.rs
src/interface/: binary.rs  env.rs  mod.rs
src/keys/: mod.rs
src/nodes/: mod.rs
src/registry/: import.rs  mod.rs  server.rs  storage.rs  tests.rs
src/runtime/: events.rs  mod.rs  state.rs
src/sites/: mod.rs
src/testing/: akash_cluster.rs  akash_network.rs  binary.rs  compose.rs  docker.rs  harness.rs  ict_network.rs  mod.rs  test_provider.rs  ws_events.rs
src/tui/: app.rs  log_stream.rs  mod.rs  tracing_capture.rs  ui.rs
src/vpn/: keygen.rs  mod.rs  pfsense.rs
src/workflow/: context.rs  mod.rs  oline.rs  step.rs
templates/json/: chain.json  chain.local.json
terpnetwork/: build.yml  deploy.yml  docker-compose.yml
testnet/: genesis-120u-1.json
tests/: akash-devnet.sh  akash_query_api.rs  authz_delegation.rs  batch_lease_e2e.rs  concurrent_child_deploy.rs  e2e.sh  env_var_consistency.rs  firewall_bootstrap.rs  hd_funding.rs  local_network_e2e.rs  localterp.sh  log_persistence.rs  oline_akash.rs  oline_ssh.rs  registry_e2e.rs  registry_integration.rs  sites_standalone.rs  test-bootstrap.sh  test-tls-nginx.sh  testnet_bootstrap.rs  testnet_deploy.rs  unified_courier_e2e.rs  vpn_pfsense.rs
tests/e2e/: README.md
(+139 files in other folders)
