[package]
name = "headscale-proto"
description = "gRPC client library for Headscale VPN control plane"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "headscale_proto"
path = "src/lib.rs"

[[bin]]
name = "proto-gen"
path = "src/main.rs"

[features]
default = ["rpc"]
rpc = ["tonic", "tonic-prost"]

[dependencies]
prost = "0.14.3"
pbjson-types = "0.9.0"
tonic = { version = "0.14.3", optional = true }
tonic-prost = { version = "0.14.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# proto-gen binary deps (also used by build.rs if needed)
prost-build = "0.14.3"
tonic-prost-build = "0.14.1"
pbjson-build = "0.9.0"
walkdir = "2.5"
anyhow = "1.0"
