[package]
name = "oline-courier"
version = "0.1.0"
edition = "2021"
description = "Ephemeral bootstrap courier for o-line node deployments. Fetches all public resources once and serves them to internal nodes."

[[bin]]
name = "courier"
path = "src/main.rs"

[dependencies]
axum = "0.8"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
